# stress

./: .gitignore  COMPARISON.md  Cargo.toml  DISTRIBUTION.md  Dockerfile  Dockerfile.ssh-test  INSTALLATION.md  LICENSE  MIGRATION_SUMMARY.md  QUICK_START.md  README.md  README_RUST.md  UNIVERSAL_INSTALLER.md  WINDOWS_INSTALLER.md  build.rs  build.sh  build_installer.bat  build_release.sh  create_app.sh  create_dmg.sh  create_icon.bat  create_icon_simple.bat  create_pkg.sh  docker-ssh-test.sh  install.ps1  install.sh  install_macos.command  install_universal.sh  installer.nsi  migrate_examples.sh  setup.sh  test-monitoring.md  test-ssh-monitoring.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
.github/workflows/: release.yml
Formula/: test-stress.rb
Test Stress.app/Contents/: Info.plist
Test Stress.app/Contents/MacOS/: launcher
configs/: Nueva suite de pruebas.json  Test 1 - 20250710_212725.json  Test 1 - 20250710_214438.json  Test 1 - 20250710_214439.json
debian/: control  rules
results/: Nueva_petición_20250711_002756.csv  Nueva_petición_20250711_014524.csv  Test_1_20250710_213936.csv  Test_1_20250710_214816.csv  Test_1_20250710_220558.csv
results/20250710_211559/: Nueva_petición_20250710_211559.csv
results/20250710_212129/: Nueva_petición_20250710_212130.csv
results/20250710_212213/: Nueva_petición_20250710_212214.csv
results/20250710_212751/: Test_1_20250710_212801.csv
results/20250710_212811/: Test_1_20250710_212811.csv
results/20250710_212816/: Test_1_20250710_212816.csv
results/20250710_212830/: Test_1_20250710_212831.csv
results/20250710_212834/: Test_1_20250710_212834.csv
results/20250710_213004/: Test_1_20250710_213009.csv
src/: cli.rs  config.rs  gui.rs  load_test.rs  main.rs  models.rs  monitor.rs  report_generator.rs
ui/: components.slint  config.slint  general.slint  individual.slint  main.slint  results.slint  suite.slint
