[package]
name = "stress"
version = "0.1.0"
edition = "2021"

[dependencies]
# Interfaz gráfica
eframe = "0.26.0"
egui = "0.26.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
futures = "0.3"

# Command line arguments
clap = { version = "4.0", features = ["derive"] }

# File operations
tokio-fs = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Excel generation
# xlsxwriter = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Progress bars
indicatif = "0.17"

# CSV handling
csv = "1.3"

# Environment variables
dotenv = "0.15"

# Open files/folders
open = "5.3"

# Native file dialogs
rfd = "0.13"
dirs = "5.0" 
umya-spreadsheet = "2.3.1"
