[package]
name = "stress"
version = "0.1.0"
edition = "2021"

[dependencies]
# Interfaz gráfica
eframe = "0.26.0"
egui = "0.26.0"
rfd = "0.13"
dirs = "5.0"
open = "5.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Progress bars
indicatif = "0.17"

# CSV handling
csv = "1.3"

# Excel generation
umya-spreadsheet = "2.3.1"

# System monitoring
sysinfo = "0.30"

# SSH connections
ssh2 = "0.9"

# Encryption for SSH credentials
aes-gcm = "0.10"
base64 = "0.21"
